# pkgs_test

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pkgs_test/: __init__.py  datasets.py  pkgs_test.py  plotting.py
tests/: test_pkgs_test.py
