[tool.poetry]
name = "pkgs_test"
version = "0.1.0"
description = "test pkgs "
authors = ["Matthias Heng"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.15"
matplotlib = "3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
